feat: docs content outline

--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -1,11 +1,11 @@
 # Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
 
-## What is Nextra?
+_Work in progress..._
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+## What is Next-Kickstart?
 
-## Documentation
+_Work in progress..._
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+## Why Next-Kickstart?
+
+_Work in progress..._
