docs: index page

--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -1,11 +1,31 @@
 # Introduction
 
-_Work in progress..._
+Welcome to the Next Kickstart documentation!
 
 ## What is Next-Kickstart?
 
-_Work in progress..._
+Next Kickstart is a web development CLI toolkit designed for straightforward
+configuration and enhanced type-safety. It streamlines the process of setting up
+new full-stack projects by providing all the necessary tools, all without the
+need for manual configuration.
 
-## Why Next-Kickstart?
+## Core Pieces
 
-_Work in progress..._
+Next Kickstart includes several core components that are automatically set up
+when you initialize a new project. These components are
+[Next.js](https://nextjs.org), [TypeScript](https://typescriptlang.org/)
+(JavaScript is not supported), [TailwindCSS](https://tailwindcss.com/),
+[T3 Env](https://env.t3.gg/docs/introduction), [ESLint](https://eslint.org/) and
+[Prettier](https://prettier.io). This selection represents an opinionated
+development stack.
+
+Additionally, there are other core components available in this development
+stack, which are not added by default during initialization. However, you can
+include them either during the project setup or at any later point using the
+"add" command. These components consist of [Drizzle](https://orm.drizzle.team)
+(with [Supabase](https://supabase.com) DB support),
+[NextAuth](https://next-auth.js.org), [ShadCN/ui](https://ui.shadcn.com), and
+[tRPC](https://trpc.io).
+
+This setup provides flexibility and allows you to tailor your project to your
+specific needs.
